--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "https://dreamertheory.github.io/<dreamertheory.github.io>/",
+  "homepage": "https://dreamertheory.github.io/dreamertheory.github.io/",
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
